# Group5_GPU_CA_SS2020

./: .gitignore  CMakeLists.txt  README.md  build.sh  createGraphs.sh  results  runBenchmark.sh
apps/floydWarshallAlgorithm/: CMakeLists.txt  main.cpp
apps/floydWarshallCU/: floyd_warshall.cu
apps/floydWarshallCuda/: CMakeLists.txt  floydWarshallCuda.cu  floydWarshallCuda.h  main.cpp
apps/floydWarshallManaged/: CMakeLists.txt  floydWarshallManaged.cu  floydWarshallManaged.h  main.cpp
apps/floydWarshallThrust/: CMakeLists.txt  floydWarshallThrust.cu  floydWarshallThrust.h  main.cpp
apps/floydWarshallZeroCopy/: CMakeLists.txt  floydWarshallZeroCopy.cu  floydWarshallZeroCopy.h  main.cpp
apps/graphGenerator/: CMakeLists.txt  main.cpp
apps/shortestPathFinder/: CMakeLists.txt
apps/shortestPathFinderThrust/: CMakeLists.txt  floydWarshallThrust.cu  floydWarshallThrust.h  main.cpp  main.cu
common/our/: OurGraph.h  OurHelper.h
data/benchmarks/: managedTimings_10_loops.csv  nativeCudaTimings_10_loops.csv  serialTimings_10_loops.csv  serialTimings_1_loops.csv  thrustTimings_10_loops.csv  zeroCopyTimings_4_loops.csv
data/graphs/: graph_6_1_1_10_1234.txt
src/: CMakeLists.txt  cppIntegration.cu
